<resources>
    <string name="app_name">Hi Cilacap baru</string>
    <string name="nama_explore">Nama</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="list">List</string>
    <string name="this_is_detailactivity">Detail Activity</string>
    <string name="daftar_explore" />
    <string name="usernameLogin">Username</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wisata_homepage">Wisata</string>
    <string name="kuliner_homepage">Kuliner</string>
    <string name="transportasi_homepage">Akses Transportasi</string>
    <string name="btn_lokasi_cilacap">Lokasi</string>
    <string name="bupati">Bupati</string>
    <string name="tv_kabupaten_cilacap">Kabupaten Cilacap</string>
    <string name="profil_pimpinan">Profil Pimpinan</string>
    <string name="wakil_bupati">Wakil Bupati</string>
    <string name="sejarah">Sejarah Kabupaten Cilacap</string>
    <string name="lms"><![CDATA[Lambang, Motto & Sesanti]]></string>
    <string name="lambang">Lambang</string>
    <string name="motto">Motto</string>
    <string name="sesanti">Sesanti</string>
    <string name="tentang">Tentang Hi Cilacap</string>
    <string name="sudahpunyaakun">Sudah punya akun?</string>
    <string name="link_login"> Login</string>
    <string name="mau_regist">Belum punya akun?</string>
    <string name="link_register"> Daftar</string>
    <string name="loading_splash">Loading</string>
    <string name="letak">Salah satu kabupaten di Provinsi Jawa Tengah. \nIbu kota nya adalah Kota Cilacap. Kabupaten ini berbatasan dengan Kabupaten Brebes dan Kabupaten Banyumas di utara, Kabupaten Banyumas dan Kabupaten Kebumen di timur, Samudra Hindia di selatan, serta Kabupaten Ciamis, Kota Banjar, dan Kabupaten Pangandaran \n(Jawa Barat) di sebelah Barat.</string>
    <string name="visi">VISI</string>
    <string name="misi">MISI</string>
    <string name="visi_cilacap">RPJMD Tahun 2017-2022 merupakan penjabaran dari tahapan pembangunan periode ketiga RPJPD Kabupaten Cilacap Tahun 2005-2025.
\nTema pembangunan RPJPD periode ketiga dan keempat menjadi salah satu
rujukan kepala daerah dalam menyusun Visi dan Misi Kabupaten Cilacap
Tahun 2017 – 2022. Visi pembangunan Kabupaten Cilacap berdasarkan
analisis visi Bupati dan Wakil Bupati terpilih adalah sebagai berikut :\nCILACAP SEMAKIN SEJAHTERA SECARA MERATA\n\n</string>
    <string name="misi_cilacap">Untuk mewujudkan visi diatas maka dirumuskan 5 (lima) misi
pembangunan daerah sebagai berikut:\n
1. Misi Pertama \n\t\t Meningkatkan layanan pendidikan dan kesehatan \n\t\t rohani dan
jasmani, serta kesejahteraan sosial \n\t\t dan keluarga.\n
2. Misi Kedua \n\t\t Meningkatkan kualitas penyelenggaraan \n\t\t pemerintahan yang
profesional bersifat \n\t\t entrepreneur dan dinamis dengan \n\t\t mengedepankan prinsip Good Governance dan \n\t\t Clean Government.\n
3. Misi Ketiga \n\t\t Mewujudkan demokratisasi, stabilitas keamanan, \n\t\t ketertiban
umum, ketentraman dan perlindungan \n\t\t masyarakat.\n
4. Misi Keempat \n\t\t Mengembangkan perekonomian yang bertumpu \n\t\t pada potensi
lokal dan regional.\n
5. Misi Kelima \n\t\t Mengembangkan dan membangun infrastruktur \n\t\t wilayah
dengan memperhatikan aspek lingkungan \n\t\t hidup dalam pemanfaatan
sumber daya alam \n secara berkelanjutan.</string>
    <string name="nama_bupati">H. Tatto Suwarto Pamuji</string>
    <string name="data_bupati">Data Pribadi\nKantor : Jl. Jend. Sudirman No.32 Cilacap\nE-mail : bupati@cilacapkab.go.id\nTTL : Cilacap, 8 April 1957\nAlamat : Jl. Diponegoro 104 Majenang\nAgama : Islam</string>
    <string name="nama_wakil_bupati">Syamsul Auliya Rachman, S.STP, MSi.</string>
    <string name="data_wakil_bupati">Data Pribadi\nKantor : Jl. Jend. Sudirman No.32 Cilacap \n E-mail  : wakilbupati@cilacapkab.go.id\nAgama : Islam</string>
    <string name="sejarah_cilacap">\t1. Zaman Kerajaan Jawa \n\t\t\t\t\t  Penelusuran sejarah zaman kerajaan Jawa \n\t\t diawali sejak zaman Kerajaan Mataram Hindu \n\t\t sampai dengan  Kerajaan Surakarta. Pada akhir zaman \n\t\t Kerajaan Majapahit (1294-1478) daerah cikal-bakal \n\t\t Kabupaten Cilacap terbagi dalam wilayah-wilayah Kerajaan \n\t\t  Majapahit, Adipati Pasir Luhur dan Kerajaan Pakuan \n\t\t  Pajajaran, yang wilayahnya membentang dari timur ke \n\t\t arah barat : \n\t\t
        – Wilayah Ki Gede Ayah dan wilayah Ki Ageng Donan \n\t\t\t\t dibawah kekuasaan Kerajaan Majapahit.\n\t\t
        – Wilayah Kerajaan Nusakambangan dan wilayah \n\t\t\t\t Adipati Pasir Luhur.\n\t\t
        – Wilayah Kerajaan Pakuan Pajajaran.\n\n\t\t
        \t\t\t\tMenurut Husein Djayadiningrat, Kerajaan Hindu \n\t\t Pakuan Pajajaran setelah diserang oleh Kerajaan \n\t\t Islam Banten dan Cirebon jatuh pada tahun 1579, \n\t\t sehingga bagian timur Kerajaan Pakuan Pajajaran \n\t\t diserahkan kepada Kerajaan Cirebon. Oleh karena \n\t\t itu seluruh wilayah cikal-bakal Kabupaten Cilacap \n\t\t di sebelah timur dibawah kekuasaan Kerajaan \n\t\t Islam Pajang dan sebelah barat diserahkan kepada \n\t\t Kerajaan Cirebon.\n\n
\t\t\t\t\tKerajaan Pajang diganti dengan Kerajaan Mataram \n\t\t Islam yang didirikan oleh Panembahan Senopatipada \n\t\t tahun 1587-1755, maka daerah cikal bakal Kabupaten \n\t\t Cilacap yang semula di bawah kekuasaan Kerajaan \n\t\t Islam Pajang diserahkan kepada Kerajaan Mataram.
\n\n\t\t\t\t\t Pada tahun 1595 Kerajaan Mataram mengadakan \n\t\t ekspansi ke Kabupaten Galuh yang berada di wilayah \n\t\t Kerajaan Cirebon. Menurut catatan harian Kompeni Belanda di Benteng Batavia, tanggal 21 Pebruari 1682 diterima surat yang berisi terjemahan perjalanan darat dari Citarum, sebelah utara Karawang ke Bagelen. Nama-nama yang dilalui dalam daerah cikal-bakal Kabupaten Cilacap adalah Dayeuhluhur dan Limbangan.
2. Zaman Penjajahan Belanda
Pembentukan Onder Afdeling Cilacap (dua bulan setelah Residen Launy bertugas) dengan besluit Gubernur Jenderal D.De Erens tanggal 17 Juli 1839 Nomor 1, memutuskan :
“Demi kepentingan pelaksanaan pemerintahan daerah yang lebih rapi di kawasan selatan Banyumas dan peningkatan pembangunan pelabuhan Cilacap, maka sambil menunggu usul organisasi distrik-distrik bagian selatan yang akan menjadi bagiannya, satu dari tiga Asisten Resident di Karesidenan ini akan berkedudukan di Cilacap”.
Karena daerah Banyumas Selatan dianggap terlalu luas untuk dipertahankan oleh Bupati Purwokerto dan Bupati Banyumas maka dengan Besluit tanggal 27 Juni 1841 Nomor 10 ditetapkan :”Patenschap” Dayeuhluhur dipisahkan dari Kabupaten Banyumas dan dijadikan satu afdeling tersendiri yaitu afdeling Cilacap dengan ibu kota Cilacap, yang menjadi tempat kedudukan Kepala Bestuur Eropa Asisten Residen dan Kepala Bestuur Pribumi Rangga atau Onder Regent. Dengan demikian Pemerintah Pribumi dinamakan Onder Regentschap setaraf dengan Patih Kepala Daerah Dayeuhluhur.
Bagaimanapun pembentukan afdeling memenuhi keinginan Bupati Purwokerto dan Banyumas yang sudah lama ingin mengurangi daerah kekuasaan masing-masing dengan Patenschap Dayeuhluhur dan Distrik Adiraja.
Adapun batas Distrik Adiraja yang bersama pattenschap Dayeuhluhur membentuk Onder Regentschap Cilacap menurut rencana Residen Banyumas De Sturier tertanggal 31 Maret 1831 adalah sebagai berikut:
Dari muara Sungai Serayu ke hulu menuju titik tengah ketinggian Gunung Prenteng. Dari sana menuju puncak, turun ke arah tenggara pegunungan Kendeng, menuju puncak Gunung Gumelem (Igir Melayat). dari sana ke arah selatan mengikuti batas wilayah Karesidenan Banyumas menuju ke laut. Dari sana ke arah barat sepanjang pantai menuju muara Sungai Serayu.
Dari batas-batas Distrik Adiraja dapat diketahui bahwa Distrik Adiraja sebagai cikal-bakal eks Kawedanan Kroya lebih besar dari pada eks Kawedanan Kroya, karena waktu itu belum terdapat Distrik Kalireja, yang dibentuk dari sub-bagian Distrik Adiraja dan sebagai Distrik Banyumas. Sehingga luas kawasan Onder Regentschap Cilacap masih lebih besar dari luas Kabupaten Cilacap sekarang.
Pada masa Residen Banyumas ke-9 Van de Moore mengajukan usul Pemerintah Hindia Belanda pada tanggal 3 Oktober 1855 yang ditandatangani Gubernur Jenderal Duijmaer Van Tuist, kepada Menteri Kolonial Kerajaan Belanda dalam Kabinet Sreserpt pada tanggal 29 Desember 1855 Nomor 86, dan surat rahasia Menteri Kolonial tanggal 5 Januari 1856 Nomor 7/A disampaikan kepada Gubernur Jenderal Hindia Belanda.
Usul pembentukan Kabupaten Cilacap menurut Menteri Kolonial bermakna dua yaitu permohonan persetujuan pembentukan Kabupaten Cilacap dan organisasi bestir pribumi dan pengeluaran anggaran lebih dari F.5.220 per tahun yang keduanya memerlukan persetujuan Raja Belanda,setelah menerima surat rahasia Menteri Kolonial Pemerintah Hindia Belanda dengan besluit Gubernur Jenderal tanggal 21 Maret 1856 Nomor 21 antara lain menetapkan Onder Regentschap Cilacap ditingkatkan menjadi Regentschap (Kabupaten Cilacap).
</string>
    <string name="lambang_motto_sesanti">Lambang, Motto &amp; Sesanti</string>
    <string name="versi_aplikasi">Versi aplikasi : 1.0</string>
    <string name="buku_panduan">Buku Panduan :</string>
    <string name="no1"> 1. Lakukan login/register supaya bisa menggunakan aplikasi.</string>
    <string name="no11"> aplikasi.</string>
    <string name="no2"> 2. Pilih kategori yang akan dilihat yaitu Wisata, Kuliner</string>
    <string name="no22"> dan Akses Transportasi.</string>
    <string name="no3"> 3. Pilih jenis Wisata, Kuliner atau Akses Transportasi </string>
    <string name="no33"> yang sudah tersedia pada list.</string>
    <string name="no4"> 4. User dapat mengetahui informasi lebih detail pada</string>
    <string name="no44"> halaman deskripsi atau informasi.</string>
    <string name="no5"> 5. Jika user ingin mengetahui letak lokasi atau rute </string>
    <string name="no55"> Kabupaten Cilacap bisa lakukan klik button lokasi</string>
    <string name="no555"> pada halaman Profil.</string>
    <string name="btn_maps">LOKASI</string>
    <string name="aplikasi_by">Aplikasi oleh : Delta Putri Dewanda</string>
    <string name="logo_by">Logo dan Gambar oleh : Delta Putri Dewanda</string>
    <string name="nama_umkm">Nama UMKM</string>
    <string name="detail_umkm">Detail UMKM</string>
    <string name="gambar">Gambar</string>
    <string name="alamat_umkm">Alamat UMKM</string>
    <string name="jam_buka_umkm">Jam buka</string>
</resources>