<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imgTransportasi"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/tv_nmUMKM"
            android:layout_width="355dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="19dp"
            android:text="Nama UMKM"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/img_umkm"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_alamat_umkm"
            android:layout_width="355dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/alamat_umkm"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_umkm" />

        <TextView
            android:id="@+id/jam_buka_umkm"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/jam_buka_umkm"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btn_maps_umkm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="150sp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_maps"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"/>
    </LinearLayout>
</ScrollView>