<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginRight="50sp"
            app:cardCornerRadius="8dp"
            android:layout_marginTop="25sp"
            android:layout_marginLeft="50sp"
            android:layout_height="150sp">

            <LinearLayout
                android:id="@+id/homepage_wisata"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="30sp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgWisata"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            app:srcCompat="@drawable/vector_wisata" />

                        <TextView
                            android:id="@+id/tv_wisata_homepage"
                            android:layout_width="match_parent"
                            android:layout_height="40sp"
                            android:fontFamily="@font/trebuc"
                            android:gravity="center"
                            android:text="@string/wisata_homepage"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            tools:text="@string/wisata_homepage"></TextView>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginRight="50sp"
            app:cardCornerRadius="8sp"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="50sp"
            android:layout_height="150sp">

            <LinearLayout
                android:id="@+id/homepage_kuliner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="30sp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgKuliner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            app:srcCompat="@drawable/kuliner" />

                        <TextView
                            android:id="@+id/tv_kuliner_homepage"
                            android:layout_width="match_parent"
                            android:layout_height="40sp"
                            android:fontFamily="@font/trebuc"
                            android:gravity="center"
                            android:text="@string/kuliner_homepage"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            tools:text="@string/kuliner_homepage"></TextView>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginRight="50sp"
            app:cardCornerRadius="8sp"
            android:layout_marginTop="30sp"
            android:layout_marginLeft="50sp"
            android:layout_height="150sp">

            <LinearLayout
                android:id="@+id/homepage_aksestransportasi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="30sp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgTransportasi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            app:srcCompat="@drawable/trans" />

                        <TextView
                            android:id="@+id/tv_transportasi_homepage"
                            android:layout_width="match_parent"
                            android:layout_height="40sp"
                            android:fontFamily="@font/trebuc"
                            android:gravity="center"
                            android:text="@string/transportasi_homepage"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            tools:text="@string/transportasi_homepage"></TextView>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>